Cambios para sección de personajes

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "storemap",
-  "vendor": "puntocommerce",
+  "vendor": "distrollermx",
   "version": "0.0.1",
   "title": "storemap",
   "description": "Custom store map para distrollermx",
